# course_work_Spreader

./: .gitignore  README.md  docker-compose.yml
eShare/: .env  Dockerfile  package-lock.json  package.json  server.js
eShare/config/: db.js
eShare/js/: package-lock.json  package.json
eShare/js/public/: index.html
eShare/js/src/: App.js
eShare/js/src/components/: UploadForm.js
eShare/js/src/css/: App.css  UploadForm.css
eShare/models/: file.model.js  index.js
eShare/routes/: download-file.js  files.js  script.js  show.js
eShare/scripts/: build_app.sh  clear_staff.sh
eShare/services/: emailServices.js  emailTemplate.js
eShare/views/: download.ejs
micro_services/: .env  Dockerfile
micro_services/scripts/: build_app.sh  clear_staff.sh
micro_services/secrets/: create_password.py  prepare_script.sh
micro_services/src/: CMakeLists.txt  mirco_service.cpp  service.hpp
micro_services/src/Cleaner/: cleaner.cpp  cleaner.hpp
micro_services/src/Compression/: compression.cpp  compression.hpp
micro_services/src/Compressor/: compressor.cpp  compressor.hpp
micro_services/src/Decompressor/: decompressor.cpp  decompressor.hpp
micro_services/src/FileUtils/: file_utils.cpp  file_utils.hpp
micro_services/src/Requests/: requests.cpp  requests.hpp
micro_services/src/pool/: pool.cpp  pool.hpp
micro_services/src/settings/: settigns.hpp  settings.cpp
micro_services/sub_libraries/lib/: libZipper.so.1
migration/: create_tables.sql
scripts/: clear_all_staff.sh  run_app.sh
